Update logo image source in index.html

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ nav ul li:hover> ul {
       
       <!--Elemento con subtema-->
       <li>
-         <img src="logotipo-cecytem.png" width="80" height="110" align="center">
+         <img src="cecytem-logo.png" width="80" height="110" align="center">
 
         </li>
           <li>
