--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ nav ul li:hover> ul {
         
        </li>
        <li>
-          <p><a href="info.php">SERVICIOS</a></p>  <!--Flecha indicando subtema-->
+          <p><a href="info2.html">SERVICIOS</a></p>  <!--Flecha indicando subtema-->
         <ul>
         <li><a href="presentables.html">PRESENTABLES</a></li>
         
