--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ nav ul li:hover> ul {
        <li>
           <p><a href="info2.html">SERVICIOS</a></p>  <!--Flecha indicando subtema-->
         <ul>
-        <li><a href="presentables.html">PRESENTABLES</a></li>
+        <li><a href="presentables2.html">PRESENTABLES</a></li>
         
       </ul>
        </li>
