Change link from gestion.php to gestion.html

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ nav ul li:hover> ul {
          <p><a href="JR_TRAMITE.HTML">TRAMITE</a></p>  <!--Flecha indicando subtema-->
         <ul>
         <li><a href="tramites.html">ADMINISTRATIVOS</a></li>
-        <li><a href="gestion.php">GESTIONAR TRAMITES</a></li>
+        <li><a href="gestion.html">GESTIONAR TRAMITES</a></li>
       </ul>
 
        <li>
