Fix link in TRAMITE section of index.html

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ nav ul li:hover> ul {
  
 
        <li>
-         <p><a href="JR_TRAMITE.HTML">TRAMITE</a></p>  <!--Flecha indicando subtema-->
+         <p><a href="">TRAMITE</a></p>  <!--Flecha indicando subtema-->
         <ul>
         <li><a href="tramites.html">ADMINISTRATIVOS</a></li>
         <li><a href="gestion.html">GESTIONAR TRAMITES</a></li>
