--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ nav ul li:hover> ul {
        </li>
 
        <li>
-        <p><a href="JR_PAGO.HTML">PAGO</a></p>  <!--Flecha indicando subtema-->
+        <p><a href="">PAGO</a></p>  <!--Flecha indicando subtema-->
         <ul>
         <p><a href="http://201.144.206.190/">PAGO PREDIAL</a></p>
            <p><a href="http://odapasvalledebravo.dyndns.org/Default.aspx">PAGO DE AGUA</a></p>
