--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ nav ul li:hover> ul {
     <li>
        <p><a href="">VISITANTES</a></p>  <!--Flecha indicando subtema-->
         <ul>
-        <li><a href="index_gc.PHP">REGISTRO</a></li>
+        <li><a href="index_gc.html">REGISTRO</a></li>
         
       </ul>
         </li>
