--- a/acta.html
+++ b/acta.html
@@ -133,7 +133,7 @@ aside a:hover {
  <body background="3.jpg">
 <font face="" color=blue>
               <H2><MARQUEE>--ACTA DE NACIMIENTO  </MARQUEE></H2>
- <P><font face="" color=white>
+ <P><font face="" color=black>
 <H2><P align ="justify"> El acta de nacimiento es un documento oficial que certifica el nacimiento de una persona, registrando datos como nombre, sexo, nacionalidad, fecha y lugar de nacimiento, así como el nombre de los padres. Es fundamental para acreditar la identidad, obtener otros documentos oficiales (como pasaporte o licencia de conducir), y garantiza el reconocimiento legal de la persona, incluyendo el acceso a derechos y servicios. 
  <HR>
 <li>Funciones principales:</li>
@@ -161,4 +161,5 @@ Fe de erratas: Si hay errores en el documento, se puede solicitar una fe de erra
  </center>
 
  </body>
+
    </html>
