--- a/guia.html
+++ b/guia.html
@@ -170,7 +170,7 @@ Guía ciudadana ambiental: enseña cómo participar en programas de reciclaje o 
     
   </aside>
   <center>
-    <video class="videoresponsive"controls><source src="video1.mp4"type="video/mp4"></video>
+    <video class="videoresponsive"controls><source src="guia.mp4"type="video/mp4"></video>
       <style>
           .videoresponsive{
            width:500px;
@@ -182,4 +182,5 @@ Guía ciudadana ambiental: enseña cómo participar en programas de reciclaje o 
 </div>
 
 </body>
+
 </html>
