--- a/ciudadano2.html
+++ b/ciudadano2.html
@@ -208,7 +208,7 @@ A través de los años, la influencia del derecho administrativo determinó el c
     
   </aside>
   <center>
-    <video class="videoresponsive"controls><source src="video1.mp4"type="video/mp4"></video>
+    <video class="videoresponsive"controls><source src="info3.mp4"type="video/mp4"></video>
       <style>
           .videoresponsive{
            width:500px;
@@ -220,4 +220,5 @@ A través de los años, la influencia del derecho administrativo determinó el c
 </div>
 
 </body>
+
 </html>
