--- a/index_gc.html
+++ b/index_gc.html
@@ -8,7 +8,7 @@
 <body>
     <body background="fondo1.jpg">
     
-    <font face="" size=15 color=#FAFDFF>GUIA CIUDADANA💎.</font>
+    <font face="" size=15 color=BLACK>GUIA CIUDADANA💎.</font>
     <hr width="100%">
     <form method="post">
         <h1>VISITANTES</h1>
@@ -27,4 +27,5 @@
      ?>
 </body>
 </html>
+
 
