--- a/guia.html
+++ b/guia.html
@@ -141,13 +141,15 @@ aside a:hover {
   <main>
     
   <H2><P align ="justify"><font face="" color="BLACK">
- Lenguaje claro y accesible: evita tecnicismos para que cualquier persona pueda comprenderla.
-
-Organización temática: suele dividirse por temas como salud, educación, seguridad, transporte, medio ambiente, trámites, participación ciudadana, etc.
-
-Información práctica: incluye direcciones, teléfonos, sitios web, pasos para realizar trámites, horarios de atención, entre otros.
-
-Enfoque ciudadano: está centrada en las necesidades y derechos de las personas, no en la burocracia de las instituciones.</H2>
+ <li>Guía ciudadana" se refiere a recursos, programas o plataformas que informan y empoderan a las personas sobre sus derechos, </font>li>
+    obligaciones, y participación cívica. 
+    <li>Puede ser un podcast educativo, un manual de consulta para la participación en obras públicas,
+    o una iniciativa de un gobierno para informar sobre programas sociales o el funcionamiento del estado.</li>
+  <li>Manuales para la participación pública: Documentos que ayudan a los ciudadanos a entender cómo participar en la toma de decisiones sobre
+    obras públicas en sus comunidades.</li>
+<li>Programas sociales: Iniciativas gubernamentales con el mismo nombre que informan sobre programas de apoyo, como la "Tarjeta Rosa" 
+    para mujeres, que también busca empoderarlas a través 
+    de capacitación y apoyo económico.</li> </H2>
   <P><font face="" color=BLACK>
                <HR>
   Guía ciudadana de trámites municipales: explica cómo pagar impuestos locales, solicitar licencias o registrar negocios.
@@ -184,3 +186,4 @@ Guía ciudadana ambiental: enseña cómo participar en programas de reciclaje o 
 </body>
 
 </html>
+
