--- a/guia.html
+++ b/guia.html
@@ -140,8 +140,8 @@ aside a:hover {
 
   <main>
     
-  <H2><P align ="justify"><font face="" color="BLACK">
- <li>Guía ciudadana" se refiere a recursos, programas o plataformas que informan y empoderan a las personas sobre sus derechos, </font>li>
+  <H3><P align ="justify"><font face="" color="BLACK">
+ <li>Guía ciudadana" se refiere a recursos, programas o plataformas que informan y empoderan a las personas sobre sus derechos, </li>
     obligaciones, y participación cívica. 
     <li>Puede ser un podcast educativo, un manual de consulta para la participación en obras públicas,
     o una iniciativa de un gobierno para informar sobre programas sociales o el funcionamiento del estado.</li>
@@ -149,7 +149,7 @@ aside a:hover {
     obras públicas en sus comunidades.</li>
 <li>Programas sociales: Iniciativas gubernamentales con el mismo nombre que informan sobre programas de apoyo, como la "Tarjeta Rosa" 
     para mujeres, que también busca empoderarlas a través 
-    de capacitación y apoyo económico.</li> </H2>
+    de capacitación y apoyo económico.</li> </H3>
   <P><font face="" color=BLACK>
                <HR>
   Guía ciudadana de trámites municipales: explica cómo pagar impuestos locales, solicitar licencias o registrar negocios.
@@ -186,4 +186,5 @@ Guía ciudadana ambiental: enseña cómo participar en programas de reciclaje o 
 </body>
 
 </html>
+
 
