--- a/guia.html
+++ b/guia.html
@@ -164,6 +164,12 @@ Guía ciudadana ambiental: enseña cómo participar en programas de reciclaje o 
 
            </center>
   </main>
+  <!-- Enlace de descarga desde Google Drive -->
+    <a class="btn" href="https://drive.google.com/file/d/19x0yEBKD88r67VslkfzDlUtp0yLQairH/view?usp=drive_link" target="_blank">
+      Descargar archivo
+    </a>
+  </main>
+
 
   <aside>
     <h3>SOBRE EL AUTOR</h3>
@@ -186,5 +192,6 @@ Guía ciudadana ambiental: enseña cómo participar en programas de reciclaje o 
 </body>
 
 </html>
+
 
 
