--- a/guia.html
+++ b/guia.html
@@ -161,14 +161,17 @@ Guía ciudadana ambiental: enseña cómo participar en programas de reciclaje o 
 </H3>
 <P align ="/justify">
 
+ <h2>Descargar archivo</h2>
 
-           </center>
-  </main>
-  <!-- Enlace de descarga desde Google Drive -->
-    <a class="btn" href="https://drive.google.com/file/d/19x0yEBKD88r67VslkfzDlUtp0yLQairH/view?usp=drive_link" target="_blank">
+    <!-- Enlace de descarga desde Google Drive -->
+    <a class="btn" href="https://drive.google.com/file/d/19x0yEBKD88r67VslkfzDlUtp0yLQairH/view?usp=drive_link">
       Descargar archivo
     </a>
   </main>
+  
+
+  
+
 
 
   <aside>
@@ -192,6 +195,7 @@ Guía ciudadana ambiental: enseña cómo participar en programas de reciclaje o 
 </body>
 
 </html>
+
 
 
 
