--- a/guia.html
+++ b/guia.html
@@ -175,19 +175,17 @@ Guía ciudadana ambiental: enseña cómo participar en programas de reciclaje o 
            justify-content:center;
            }
            </center>
-        <h2>Descargar archivo</h2>
+           <h2>Descargar archivo</h2>
 
     <!-- Enlace de descarga desde Google Drive -->
-    <a class="btn" href="https://drive.google.com/file/d/19x0yEBKD88r67VslkfzDlUtp0yLQairH/view?usp=drive_link">
+    <a class="btn" href="https://drive.google.com/file/d/19x0yEBKD88r67VslkfzDlUtp0yLQairH/view?usp=drive_link" target="_blank">
       Descargar archivo
     </a>
 
 
-</div>
-
 </body>
+      </html>
 
-</html>
 
 
 
