--- a/guia.html
+++ b/guia.html
@@ -83,7 +83,8 @@ l
     <video class="videoresponsive"controls><source src="guia.mp4"type="video/mp4"></video>
       <style>
           .videoresponsive{
-           width:1000px;
+           width:300px;
+            height:300px;
            justify-content:center;
            }
 
@@ -91,7 +92,7 @@ l
     <h2>Descargar archivo</h2>
 
     <!-- Enlace de descarga desde Google Drive -->
-    <a class="btn" href="https://drive.google.com/file/d/19x0yEBKD88r67VslkfzDlUtp0yLQairH/view?usp=drive_link" target="_blank">
+    <a class="btn" href="https://drive.google.com/drive/folders/1sAp7Mrq6M1wKiKfzPnYHqedI9Smei1wg" target="_blank">
       Descargar archivo
     </a>
   </main>
@@ -102,6 +103,7 @@ l
   </footer>
 </body>
 </html>
+
 
 
 
