--- a/guia.html
+++ b/guia.html
@@ -92,7 +92,7 @@ l
     <h2>Descargar archivo</h2>
 
     <!-- Enlace de descarga desde Google Drive -->
-    <a class="btn" href="https://drive.google.com/drive/folders/1sAp7Mrq6M1wKiKfzPnYHqedI9Smei1wg" target="_blank">
+    <a class="btn" href="https://drive.google.com/file/d/1CFt-1YV4UHNyf_UM9aeZPsXYBreZ2cnU/view?usp=drive_link" target="_blank">
       Descargar archivo
     </a>
   </main>
@@ -103,6 +103,7 @@ l
   </footer>
 </body>
 </html>
+
 
 
 
