--- a/guia.html
+++ b/guia.html
@@ -92,9 +92,9 @@ l
     <h2>Descargar archivo</h2>
 
     <!-- Enlace de descarga desde Google Drive -->
-    <a class="btn" href="https://drive.google.com/file/d/1CFt-1YV4UHNyf_UM9aeZPsXYBreZ2cnU/view?usp=drive_link" target="_blank">
-      Descargar archivo
-    </a>
+    <a href="https://drive.google.com/file/d/19x0yEBKD88r67VslkfzDlUtp0yLQairH/view?usp=drive_link" download>
+  Descargar archivo
+</a>
   </main>
   
 
@@ -103,6 +103,7 @@ l
   </footer>
 </body>
 </html>
+
 
 
 
