--- a/guia.html
+++ b/guia.html
@@ -92,7 +92,7 @@ l
     <h2>Descargar archivo</h2>
 
     <!-- Enlace de descarga desde Google Drive -->
-    <a href="https://drive.google.com/file/d/19x0yEBKD88r67VslkfzDlUtp0yLQairH/view?usp=drive_link" download>
+    <a href="https://drive.google.com/file/d/19x0yEBKD88r67VslkfzDlUtp0yLQairH/view?usp=sharing" download>
   Descargar archivo
 </a>
   </main>
@@ -103,6 +103,7 @@ l
   </footer>
 </body>
 </html>
+
 
 
 
