--- a/guia.html
+++ b/guia.html
@@ -1,4 +1,4 @@
- <!doctype html>
+<!doctype html>
 <html lang="es">
 <head>
   <meta charset="utf-8">
@@ -46,63 +46,63 @@
   </style>
 </head>
 <body>
-  <header>
-    <h1>Ciudadano - SECCIÓN 1</h1>
-  </header>
-
-  <header>
-    <h1>Ciudadano - SECCIÓN 2</h1>
-  </header>
+  
 
   <main>
-    <h2>CIUDADANO...</h2>
+    <h2>GUIA CIUDADANA</h2>
 
-   
+   <img src="FONDO5.jpg" alt="Imagen del ciudadano">
+   <img src="fondo3.jpg" alt="Imagen del ciudadano">
     <p>
-      <li>Guía ciudadana" se refiere a recursos, programas o plataformas que informan y empoderan a las personas sobre sus derechos, </li>
-    obligaciones, y participación cívica. 
-    <li>Puede ser un podcast educativo, un manual de consulta para la participación en obras públicas,
-    o una iniciativa de un gobierno para informar sobre programas sociales o el funcionamiento del estado.</li>
-  <li>Manuales para la participación pública: Documentos que ayudan a los ciudadanos a entender cómo participar en la toma de decisiones sobre
-    obras públicas en sus comunidades.</li>
-<li>Programas sociales: Iniciativas gubernamentales con el mismo nombre que informan sobre programas de apoyo, como la "Tarjeta Rosa" 
-    para mujeres, que también busca empoderarlas a través 
-    de capacitación y apoyo económico.</li> </H3>
-     Guía ciudadana de trámites municipales: explica cómo pagar impuestos locales, solicitar licencias o registrar negocios.
-
-Guía ciudadana de derechos humanos: informa sobre mecanismos para denunciar violaciones de derechos o acceder a servicios de justicia.
-
-Guía ciudadana ambiental: enseña cómo participar en programas de reciclaje o denunciar daños al medio ambiente.
-<HR>
+      Una guía digital es un documento en formato electrónico que contiene información o instrucciones para realizar una tarea,
+      aprender un tema o facilitar una operación. A diferencia de las guías de papel, las versiones digitales pueden incluir contenido dinámico,
+      interactivo y multimedia (como videos y enlaces), y a menudo se adaptan a diversos propósitos como guías de estudio, manuales de usuario o 
+      documentos de acompañamiento para trámites
+      Características principales
       
+Formato electrónico: se crean y acceden a través de dispositivos como computadoras, tabletas o teléfonos móviles. 
+Contenido interactivo: a menudo integran elementos interactivos como videos, enlaces y simulaciones para una mejor experiencia de aprendizaje y uso. 
+Accesibilidad y dinamismo: pueden actualizarse fácilmente y ser accesibles en cualquier momento y lugar. 
+Diversidad de usos: se utilizan para una amplia gama de aplicaciones, desde la educación y el turismo hasta la gestión empresarial y los trámites gubernamentales. 
+      Ejemplos de guías digitales
+Guías de estudio: materiales de apoyo creados por profesores o estudiantes para preparar exámenes o trabajos. 
+Guías de usuario: manuales para aprender a utilizar un software o producto nuevo de manera interactiva. 
+Guías de viaje: recursos turísticos en línea que incluyen mapas interactivos, información sobre puntos de interés y tours virtuales. 
+Guías de trámites: documentos electrónicos que reemplazan a los manuales en papel para procesos administrativos,
+      como las guías de remisión o de propiedad de ganado,
+      que pueden tener un código QR para su verificación
     </p>
-l
+
     <h2>Video informativo</h2>
 
     <!-- Video desde Google Drive -->
-    <video class="videoresponsive"controls><source src="guia.mp4"type="video/mp4"></video>
+    <video class="videoresponsive"controls><source src="acta.mp4"type="video/mp4"></video>
       <style>
           .videoresponsive{
-           width:300px;
-            height:300px;
+           width:1000px;
+           height:900px
            justify-content:center;
            }
-
+  
 
     <h2>Descargar archivo</h2>
 
     <!-- Enlace de descarga desde Google Drive -->
-    <a href="https://drive.google.com/file/d/19x0yEBKD88r67VslkfzDlUtp0yLQairH/view?usp=sharing" download>
-  Descargar archivo
-</a>
+    <a class="btn" href="https://drive.google.com/file/d/1CFt-1YV4UHNyf_UM9aeZPsXYBreZ2cnU/view?usp=drive_link">
+      Descargar archivo
+    </a>
   </main>
-  
+  <header>
+    <h1>Ciudadano - SECCIÓN 2</h1>
+  </header>
 
   <footer>
     <p>© 2025 Ciudadano Ejemplar</p>
   </footer>
 </body>
 </html>
+
+
 
 
 
