--- a/guia.html
+++ b/guia.html
@@ -88,7 +88,7 @@ Guías de trámites: documentos electrónicos que reemplazan a los manuales en p
     <h2>Descargar archivo</h2>
 
     <!-- Enlace de descarga desde Google Drive -->
-    <a class="btn" href="https://drive.google.com/file/d/1CFt-1YV4UHNyf_UM9aeZPsXYBreZ2cnU/view?usp=drive_link">
+    <a class="btn" href="https://drive.google.com/file/d/19x0yEBKD88r67VslkfzDlUtp0yLQairH/view?usp=sharing">
       Descargar archivo
     </a>
   </main>
@@ -101,6 +101,7 @@ Guías de trámites: documentos electrónicos que reemplazan a los manuales en p
   </footer>
 </body>
 </html>
+
 
 
 
