--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ nav ul li:hover> ul {
   </form>
     </li>
        <li>
-         <li> <p><a href="guia.html">GUIA CIUDADANA</a></p></li>  <!--Flecha indicando subtema-->
+         <li> <p><a href="guia2.html">GUIA CIUDADANA</a></p></li>  <!--Flecha indicando subtema-->
         
        </li>
       <li>
