--- a/guia2.html
+++ b/guia2.html
@@ -60,18 +60,22 @@
    <img src="cecyto.jpg" alt="Imagen del ciudadano">
    <img src="equipo.jpg" alt="Imagen del ciudadano">
     <p>
-      La participación ciudadana es uno de los pilares fundamentales de toda sociedad democrática. 
-      A través de ella, las personas pueden influir en las decisiones públicas, expresar sus opiniones 
-      y contribuir a la mejora de su comunidad. Participar no se limita al voto; también incluye el diálogo, 
-      la colaboración en proyectos sociales y la vigilancia de la gestión pública. 
-      Fomentar la participación desde la escuela y la familia fortalece la cultura cívica 
-      y promueve una sociedad más justa y responsable.
+     Una "guía ciudadana" puede ser un documento o un recurso que ofrece información sobre los derechos,
+      deberes y responsabilidades de los ciudadanos para que puedan participar activamente en la sociedad. 
+      Su objetivo es orientar a las personas para entender y ejercer plenamente su rol como miembros de una comunidad, 
+      ya sea a través de la educación cívica, la participación en proyectos públicos o la promoción de la seguridad comunitaria.
+      Conceptos clave de una guía ciudadana
+Educación cívica: Proporciona conocimientos sobre la estructura del Estado, el funcionamiento de las leyes y los procesos democráticos para formar ciudadanos informados.
+Derechos y deberes: Explica los derechos y obligaciones de los ciudadanos, fomentando un compromiso social y el respeto por las normas y el medio ambiente.
+Participación ciudadana: Incluye herramientas e información para que las personas puedan incidir en la toma de decisiones y participar en la definición de proyectos públicos en sus comunidades.
+Seguridad comunitaria: Ofrece orientación sobre los deberes y responsabilidades de los ciudadanos para contribuir a la seguridad y el bienestar en su barrio y comunidad.
+Herramienta de consulta: Sirve como una fuente de información accesible y práctica para que los ciudadanos puedan orientar sus ideas y acciones.
     </p>
 l
     <h2>Video informativo</h2>
 
     <!-- Video desde Google Drive -->
-    <iframe src="https://drive.google.com/file/d/1RZGn1exEzVRpIlT90DCpiEJrS5y4hzOb/preview"
+    <iframe src="https://drive.google.com/file/d/1bbbJbeM-q2wrLhjklSLd4Ynzc9SogBei/view?usp=drive_link"
             width="640" height="360" allow="autoplay; encrypted-media"
             title="Video desde Google Drive">
     </iframe>
@@ -79,13 +83,11 @@ l
     <h2>Descargar archivo</h2>
 
     <!-- Enlace de descarga desde Google Drive -->
-    <a class="btn" href="https://drive.google.com/uc?export=download&id=1WyIAo-0fYs4TnJiTpT5A6GA7fwtTQOIT" target="_blank">
+    <a class="btn" href="https://drive.google.com/file/d/19x0yEBKD88r67VslkfzDlUtp0yLQairH/view?usp=sharing">
       Descargar archivo
     </a>
   </main>
-  <header>
-    <h1>Ciudadano - SECCIÓN 2</h1>
-  </header>
+  
 
   <footer>
     <p>© 2025 Ciudadano Ejemplar</p>
