--- a/guia2.html
+++ b/guia2.html
@@ -57,8 +57,8 @@
   <main>
     <h2>CIUDADANO...</h2>
 
-   <img src="cecyto.jpg" alt="Imagen del ciudadano">
-   <img src="equipo.jpg" alt="Imagen del ciudadano">
+   <img src="fondo5.jpg" alt="Imagen del ciudadano">
+   <img src="7.webp" alt="Imagen del ciudadano">
     <p>
      Una "guía ciudadana" puede ser un documento o un recurso que ofrece información sobre los derechos,
       deberes y responsabilidades de los ciudadanos para que puedan participar activamente en la sociedad. 
@@ -75,10 +75,13 @@ l
     <h2>Video informativo</h2>
 
     <!-- Video desde Google Drive -->
-    <iframe src="https://drive.google.com/file/d/1bbbJbeM-q2wrLhjklSLd4Ynzc9SogBei/view?usp=drive_link"
-            width="640" height="360" allow="autoplay; encrypted-media"
-            title="Video desde Google Drive">
-    </iframe>
+    <video class="videoresponsive"controls><source src="VIDEOENTREVISTA.mp4"type="video/mp4"></video>
+      <style>
+          .videoresponsive{
+           width:1000px;
+           justify-content:center;
+           }
+        </style>
 
     <h2>Descargar archivo</h2>
 
