--- a/guia2.html
+++ b/guia2.html
@@ -57,7 +57,7 @@
   <main>
     <h2>CIUDADANO...</h2>
 
-   <img src="fondo5.jpg" alt="Imagen del ciudadano">
+   <img src="5.jpg" alt="Imagen del ciudadano">
    <img src="7.webp" alt="Imagen del ciudadano">
     <p>
      Una "guía ciudadana" puede ser un documento o un recurso que ofrece información sobre los derechos,
@@ -75,7 +75,7 @@ l
     <h2>Video informativo</h2>
 
     <!-- Video desde Google Drive -->
-    <video class="videoresponsive"controls><source src="VIDEOENTREVISTA.mp4"type="video/mp4"></video>
+    <video class="videoresponsive"controls><source src="guia.mp4"type="video/mp4"></video>
       <style>
           .videoresponsive{
            width:1000px;
