--- a/guia2.html
+++ b/guia2.html
@@ -78,7 +78,8 @@ l
     <video class="videoresponsive"controls><source src="guia.mp4"type="video/mp4"></video>
       <style>
           .videoresponsive{
-           width:1000px;
+           width:500px;
+            height:500px;
            justify-content:center;
            }
         </style>
