--- a/tramites.html
+++ b/tramites.html
@@ -104,7 +104,9 @@
       </script>
 </head>
 <body>
-  <img src="TI.jpg" width="150" height="500" align="center">
+    <img src="TI.jpg" alt="Imagen ciudadana" width="300">
+
+  
   <section class="gal"><br>
 
     <main id="galeria" class="galeria">
@@ -172,6 +174,7 @@
       
 </body>
 </html>
+
 
 
 
