--- a/guia2.html
+++ b/guia2.html
@@ -79,14 +79,11 @@ l
     <h2>Video informativo</h2>
 
     <!-- Video desde Google Drive -->
-    <video class="videoresponsive"controls><source src="guia.mp4"type="video/mp4"></video>
-      <style>
-          .videoresponsive{
-           width:300px;
-            height:300px;
-           justify-content:center;
-           }
-        </style>
+ 
+      <iframe src="guia.mp4" 
+            width="640" height="360" allow="autoplay; encrypted-media" 
+            title="Video desde Google Drive"> 
+    </iframe>
 
     <h2>Descargar archivo</h2>
 
