--- a/ciudadano2.html
+++ b/ciudadano2.html
@@ -204,21 +204,17 @@ A través de los años, la influencia del derecho administrativo determinó el c
   <aside>
     <h3>SOBRE EL AUTOR</h3>
     <p><a href="#">JR_GUADARRAMA</a><br>
-    
-    
+  
   </aside>
-  <center>
-    <video class="videoresponsive"controls><source src="info3.mp4"type="video/mp4"></video>
-      <style>
-          .videoresponsive{
-           width:500px;
-           height:500px;
-           justify-content:center;
-           }
-           </center>
+ 
+          <iframe src="info.mp4" 
+            width="640" height="360" allow="autoplay; encrypted-media" 
+            title="Video desde Google Drive"> 
+    </iframe>
 
 </div>
 
 </body>
 
 </html>
+
