--- a/dudas_pas.html
+++ b/dudas_pas.html
@@ -212,14 +212,13 @@ En México: agenda en el portal oficial de la SRE / apartado de pasaportes (la S
 
 </div>
 
-<center>
-<video class="videoresponsive"controls><source src="pas.mp4"type="video/mp4"></video>
-      <style>
-          .videoresponsive{
-           width:450px;
-           height:400px
-           justify-content:center;
-           }
- </center>
+
+
+        <iframe src="pas.mp4" 
+            width="640" height="360" allow="autoplay; encrypted-media" 
+            title="Video desde archivos"> 
+    </iframe>
+
 </body>
 </html>
+
