--- a/acta.html
+++ b/acta.html
@@ -150,16 +150,14 @@ Formato único: En México, existe un formato único que puede imprimirse en hoj
 Copias certificadas: Se pueden solicitar copias certificadas en diferentes formatos, como una copia fiel de la original o una copia en formato de imagen. 
 Fe de erratas: Si hay errores en el documento, se puede solicitar una fe de erratas para corregirlos. 
  <HR>
- <center>
-<video class="videoresponsive"controls><source src="acta.mp4"type="video/mp4"></video>
-      <style>
-          .videoresponsive{
-           width:1000px;
-           height:900px
-           justify-content:center;
-           }
- </center>
+
+
+        <iframe src="acta.mp4" 
+            width="640" height="360" allow="autoplay; encrypted-media" 
+            title="Video desde Google Drive"> 
+    </iframe>
 
  </body>
 
    </html>
+
