Fix HTML structure and style for curp_dudas.html

--- a/curp_dudas.html
+++ b/curp_dudas.html
@@ -180,14 +180,12 @@ Corrección: Para solicitar la corrección o actualización de tu CURP, puedes e
 Información adicional: Si necesitas información adicional, puedes comunicarte al Centro de Atención y Servicio del Registro Nacional de Población.
 
 </div>
-<center>
-<video class="videoresponsive"controls><source src="curp.mp4"type="video/mp4"></video>
-      <style>
-          .videoresponsive{
-           width:900px;
-           height:900px
-           justify-content:center;
-           }
- </center>
+
+
+        <iframe src="curp.mp4" 
+            width="640" height="360" allow="autoplay; encrypted-media" 
+            title="Video desde Google Drive"> 
+    </iframe>
 </body>
+
 </html>
