--- a/dudas_licencia.html
+++ b/dudas_licencia.html
@@ -168,14 +168,11 @@ Requisito de seguro: Es indispensable para los trámites de seguro en caso de ac
 
 
 </div>
-<center>
-<video class="videoresponsive"controls><source src="lice.mp4"type="video/mp4"></video>
-      <style>
-          .videoresponsive{
-           width:400px;
-           height:400px
-           justify-content:center;
-           }
- </center>
+
+        <iframe src="lice.mp4" 
+            width="640" height="360" allow="autoplay; encrypted-media" 
+            title="Video desde Google Drive"> 
+    </iframe>
 </body>
+
 </html>
