--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ nav ul li:hover > ul {
             <a href="#">TRÁMITE</a>
             <ul>
                 <li><a href="tramites.html">ADMINISTRATIVOS</a></li>
-                <li><a href="gestion.php">GESTIONAR TRÁMITES</a></li>
+                <li><a href="gestion.html">GESTIONAR TRÁMITES</a></li>
             </ul>
         </li>
 
