Remove href placeholders from anchor tags

--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@ nav ul li:hover > ul {
         <li><a href="info.html">INFORMACIÓN</a></li>
 
         <li>
-            <a href="#">SERVICIOS</a>
+            <a href="">SERVICIOS</a>
             <ul>
                 <li><a href="presentables2.html">PRESENTABLES</a></li>
             </ul>
         </li>
 
         <li>
-            <a href="#">TRÁMITE</a>
+            <a href="">TRÁMITE</a>
             <ul>
                 <li><a href="tramites.html">ADMINISTRATIVOS</a></li>
                 <li><a href="gestión.html">GESTIONAR TRÁMITES</a></li>
@@ -107,7 +107,7 @@ nav ul li:hover > ul {
         </li>
 
         <li>
-            <a href="#">PAGO</a>
+            <a href="">PAGO</a>
             <ul>
                 <li><a href="http://201.144.206.190/">PAGO PREDIAL</a></li>
                 <li><a href="http://odapasvalledebravo.dyndns.org/Default.aspx">PAGO DE AGUA</a></li>
@@ -128,7 +128,7 @@ nav ul li:hover > ul {
         </li>
 
         <li>
-            <a href="#">VISITANTES</a>
+            <a href="">VISITANTES</a>
             <ul>
                 <li><a href="index_gc.html">REGISTRO</a></li>
             </ul>
