--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=2.0">
+<meta name="viewport" content="width=device-width, initial-scale=2.5">
 <title>Guía Digital Ciudadana</title>
 
 <style>
@@ -102,7 +102,7 @@ nav ul li:hover > ul {
             <a href="">TRÁMITE</a>
             <ul>
                 <li><a href="tramites.html">ADMINISTRATIVOS</a></li>
-                <li><a href="gestionar.html">GESTIONAR TRÁMITES</a></li>
+                <li><a href="gestionar.html">GESTIONAR TRÁMITES..</a></li>
             </ul>
         </li>
 
