--- a/dudas_pas.html
+++ b/dudas_pas.html
@@ -215,10 +215,11 @@ En México: agenda en el portal oficial de la SRE / apartado de pasaportes (la S
 
 
         <iframe src="pas.mp4" 
-            width="640" height="360" allow="autoplay; encrypted-media" 
+            width="440 height="280" allow="autoplay; encrypted-media" 
             title="Video desde archivos"> 
     </iframe>
 
 </body>
 </html>
+
 
