--- a/galeria2.html
+++ b/galeria2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=2.0">
     <title>Plantel Valle de Bravo</title>
-    <link rel="stylesheet" href="principal.css">
+    <link rel="stylesheet" href="principal2.css">
       <link rel="icon" href="valle.png" type="png">
     <a href="OPDAPAS.html"></a>
  
@@ -160,6 +160,7 @@
       
 </body>
 </html>
+
 
 
 
