--- a/tramites.html
+++ b/tramites.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=2.0">
     <title>Plantel Valle de Bravo</title>
-    <link rel="stylesheet" href="principal2.css">
+    <link rel="stylesheet" href="principal.css">
       <link rel="icon" href="img/unnamed-removebg-preview.png" type="png">
     <a href="OPDAPAS.html"></a>
  
@@ -172,4 +172,5 @@
       
 </body>
 </html>
+
 
