--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ nav ul li:hover > ul {
 
         <li><a href="ciudadano2.html">CIUDADANO</a></li>
 
-        <li><a href="info.html">INFORMACIÓN</a></li>
+        <li><a href="informacion.html">INFORMACIÓN</a></li>
 
         <li>
             <a href="">SERVICIOS</a>
