--- a/index.html
+++ b/index.html
@@ -135,10 +135,10 @@ nav ul li:hover > ul {
         </li>
 
         <li>
-            <a href="https://www.valledebravo.gob.mx/tramites_en_linea.html">
-                AYUNTAMIENTO
-            </a>
+            <a href="index_vs.html"><img src="logo12.png" alt="imagen"></a>
         </li>
+            <a href="https://www.valledebravo.gob.mx/tramites_en_linea.html">AYUNTAMIENTO</a>
+        
     </ul>
 </nav>
 
