--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@ nav ul li:hover > ul {
 
         <li><a href="ciudadano2.html">CIUDADANO</a></li>
 
-        <li><a href="información.html">INFORMACIÓN</a></li>
+        <li><a href="info.html">INFORMACIÓN</a></li>
 
         <li>
-            <a href="">SERVICIOS</a>
+            <a href="info.php">SERVICIOS</a>
             <ul>
                 <li><a href="presentables2.html">PRESENTABLES</a></li>
             </ul>
