--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ nav ul li:hover > ul {
         <li><a href="info.html">INFORMACIÓN</a></li>
 
         <li>
-            <a href="info.php">SERVICIOS</a>
+            <a href="info3.html">SERVICIOS</a>
             <ul>
                 <li><a href="presentables2.html">PRESENTABLES</a></li>
             </ul>
