--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@ nav ul li:hover > ul {
                 <li><a href="gestionar.html">GESTIONAR TRÁMITES..</a></li>
             </ul>
         </li>
+        <li>
+         <p><a href="JR_SOLICITUD.HTML">SOLICITUD</a></p>  <!--Flecha indicando subtema-->
+       </li>
 
         <li>
             <a href="">PAGO</a>
