--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ nav ul li:hover > ul {
             </ul>
         </li>
         <li>
-         <p><a href="JR_SOLICITUD.HTML">SOLICITUD</a></p>  <!--Flecha indicando subtema-->
+         <li><a href="JR_SOLICITUD.html">SOLICITUD</a></li>  <!--Flecha indicando subtema-->
        </li>
 
         <li>
