--- a/JR_SOLICITUD.html
+++ b/JR_SOLICITUD.html
@@ -216,7 +216,7 @@ El tiempo estimado para recibir una respuesta es de entre 24 a 72 horas hábiles
 
   
   <center>
-<video class="videoresponsive"controls><source src="solicitud.mp4"type="video/mp4"></video>
+<video class="videoresponsive"controls><source src="Solicitud.mp4"type="video/mp4"></video>
       <style>
           .videoresponsive{
            width:400px;
@@ -228,4 +228,5 @@ El tiempo estimado para recibir una respuesta es de entre 24 a 72 horas hábiles
 </div>
 
 </body>
+
 </html>
